# sylvorg

./: #damascus.aiern.org#  #testing.aiern.org#  .bashrc  .direnvrc  .ecrc  .gitattributes  .gitconfig  .gitconfig##template  .gitignore  .gitignore.bak  .gitmodules  .gittrees  .hgignore  .hgrc  .profile  .tmux.conf  .tmux.conf##template  .vimrc  .xinitrc  .xonshrc  .xonshrc##template  .zlogin  .zlogout  .zprofile  .zshenv  .zshrc  CHANGES.org  LICENSE  Makefile  README.md  README.org  a.aiern.org  aiern-digraphs.el  aiern-maps.el  aiern-repeat.el  aiern-types.el  alloy.el  b.aiern.org  backup-tangle.sh  black.aiern.org  (+47 more)
.SpaceVim.d/: init.toml
.byobu/: .tmux.conf##template
.dep/: README.org
.doom.d/: config.el
.emacs.d/: doom-modeline.org
.github/: ISSUE_TEMPLATE.md
.gnupg/: .#lk0x00000000022c3010.siluam.22707  gpg-agent.conf  pubring.kbx  pubring.kbx~  random_seed  reader_0.status  sshcontrol  tofu.db  trustdb.gpg
.gnupgk/: jeet_ray_rsa  jeet_ray_rsa.pub
.spacemacs.d/: README.org
.ssh/: assh.yml  id_ecdsa  id_ecdsa.pub  id_ed25519  id_ed25519.bak  id_ed25519.pub  id_ed25519.pub.bak  id_rsa.bak  id_rsa.pub  jeet_ray_rsa  jeet_ray_rsa.pub  shadowrylander_ecdsa  shadowrylander_ecdsa.pub  shadowrylander_ed25519  shadowrylander_ed25519.pub  shadowrylander_rsa
.termux/: termux.properties
.tmuxp/: default.yaml
.xonsh.d/: fzfdf.sh
doom-sandbox/: init.el
home/: .bashrc  .direnvrc  .gitattributes  .gitignore  .xonshrc  .zshrc  (+4 more)
oreo-hyrule-test/: makefile  pyproject.toml  setup.py  shell.nix  tests.hy
oreo-hyrule-test/oreo/: __init__.py  oreo.hy
(+560 files in other folders)
